Found more strings to translate

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -121,12 +121,15 @@
 	"debts.allParticipants": "All Participants",
 	"debts.participant": "Participant",
 	"debts.ownership": "Ownership",
-	"debts.noPoolActivity": "No pool activity yet",
+	"debts.noPoolActivity": "No pool account activity yet",
 	"debts.noRelationships": "No relationships with other participants",
 	"debts.paymentsIncluded": "Payments Included",
 	"debts.transaction": "transaction",
 	"debts.transactions": "transactions",
 	"debts.recurring": "recurring",
+	"debts.paidBy": "Paid by",
+	"debts.on": "on",
+	"debts.from": "from",
 
 	"payments.title": "Payments",
 	"payments.addPayment": "Add Payment",
@@ -148,7 +151,7 @@
 	"payments.include": "Include",
 	"payments.weight": "Weight",
 	"payments.share": "Share",
-	"payments.depositToPool": "Deposit to pool",
+	"payments.depositToPool": "Deposit to pool account",
 	"payments.transferToThisPerson": "Transfer money to this person",
 	"payments.deposit": "Deposit",
 	"payments.payBack": "Pay back",
@@ -163,6 +166,11 @@
 	"payments.months": "Months",
 	"payments.year": "Year",
 	"payments.years": "Years",
+	"payments.recurrence.daily": "daily",
+	"payments.recurrence.weekly": "weekly",
+	"payments.recurrence.monthly": "monthly",
+	"payments.recurrence.yearly": "yearly",
+	"payments.recurrence.every": "every",
 	"payments.selectDaysOfWeek": "Select days of the week:",
 	"payments.selectDaysOfMonth": "Select days of the month:",
 	"payments.monthdayWarning": "Note: For months with fewer days, the last day of the month will be used.",
@@ -185,7 +193,7 @@
 	"participants.defaultWeight": "Default Weight",
 	"participants.type": "Type",
 	"participants.user": "User",
-	"participants.pool": "Pool",
+	"participants.pool": "Pool Account",
 	"participants.adding": "Adding...",
 	"participants.allParticipants": "All Participants",
 	"participants.noParticipantsYet": "No participants yet. Add one to get started.",
@@ -235,7 +243,20 @@
 	"history.confirmUndoQuestion": "Are you sure you want to undo this action?",
 	"history.reasonOptional": "Reason (optional)",
 	"history.reasonPlaceholder": "Why are you undoing this?",
+	"history.actions.all": "All Actions",
+	"history.actions.CREATE": "Created",
+	"history.actions.UPDATE": "Updated",
+	"history.actions.DELETE": "Deleted",
+	"history.actions.UNDO": "Undone",
+	"history.entities.all": "All Types",
+	"history.entities.payment": "Payments",
+	"history.entities.participant": "Participants",
+	"history.entities.project_member": "Members",
+	"history.entities.project": "Project",
+	"history.entities.contribution": "Contribution",
+	"history.entities.participant_invite": "Invite",
 
+	"projectSettings.backToProject": "← Back to project",
 	"projectSettings.title": "Project Settings",
 	"projectSettings.needAdminPermissions": "You need admin permissions to access settings.",
 	"projectSettings.projectDetails": "Project Details",
