--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -121,12 +121,15 @@
 	"debts.allParticipants": "Tous les participants",
 	"debts.participant": "Participant",
 	"debts.ownership": "Propriété",
-	"debts.noPoolActivity": "Aucune activité de pool pour le moment",
+	"debts.noPoolActivity": "Aucune activité de cagnotte pour le moment",
 	"debts.noRelationships": "Aucune relation avec d'autres participants",
 	"debts.paymentsIncluded": "Paiements inclus",
 	"debts.transaction": "transaction",
 	"debts.transactions": "transactions",
 	"debts.recurring": "récurrent",
+	"debts.paidBy": "Payé par",
+	"debts.on": "le",
+	"debts.from": "du",
 
 	"payments.title": "Paiements",
 	"payments.addPayment": "Ajouter un paiement",
@@ -148,7 +151,7 @@
 	"payments.include": "Inclure",
 	"payments.weight": "Poids",
 	"payments.share": "Part",
-	"payments.depositToPool": "Déposer dans le pool",
+	"payments.depositToPool": "Déposer dans la cagnotte",
 	"payments.transferToThisPerson": "Transférer de l'argent à cette personne",
 	"payments.deposit": "Dépôt",
 	"payments.payBack": "Rembourser",
@@ -163,6 +166,11 @@
 	"payments.months": "Mois",
 	"payments.year": "Année",
 	"payments.years": "Années",
+	"payments.recurrence.daily": "quotidien",
+	"payments.recurrence.weekly": "hebdomadaire",
+	"payments.recurrence.monthly": "mensuel",
+	"payments.recurrence.yearly": "annuel",
+	"payments.recurrence.every": "tous les",
 	"payments.selectDaysOfWeek": "Sélectionnez les jours de la semaine :",
 	"payments.selectDaysOfMonth": "Sélectionnez les jours du mois :",
 	"payments.monthdayWarning": "Remarque : Pour les mois avec moins de jours, le dernier jour du mois sera utilisé.",
@@ -185,7 +193,7 @@
 	"participants.defaultWeight": "Poids par défaut",
 	"participants.type": "Type",
 	"participants.user": "Utilisateur",
-	"participants.pool": "Pool",
+	"participants.pool": "Cagnotte",
 	"participants.adding": "Ajout...",
 	"participants.allParticipants": "Tous les participants",
 	"participants.noParticipantsYet": "Aucun participant pour le moment. Ajoutez-en un pour commencer.",
@@ -235,7 +243,20 @@
 	"history.confirmUndoQuestion": "Êtes-vous sûr de vouloir annuler cette action ?",
 	"history.reasonOptional": "Raison (optionnelle)",
 	"history.reasonPlaceholder": "Pourquoi annulez-vous ceci ?",
+	"history.actions.all": "Toutes les actions",
+	"history.actions.CREATE": "Créé",
+	"history.actions.UPDATE": "Modifié",
+	"history.actions.DELETE": "Supprimé",
+	"history.actions.UNDO": "Annulé",
+	"history.entities.all": "Tous les types",
+	"history.entities.payment": "Paiements",
+	"history.entities.participant": "Participants",
+	"history.entities.project_member": "Membres",
+	"history.entities.project": "Projet",
+	"history.entities.contribution": "Contribution",
+	"history.entities.participant_invite": "Invitation",
 
+	"projectSettings.backToProject": "← Retour au projet",
 	"projectSettings.title": "Paramètres du projet",
 	"projectSettings.needAdminPermissions": "Vous avez besoin de permissions d'administrateur pour accéder aux paramètres.",
 	"projectSettings.projectDetails": "Détails du projet",
