--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -256,6 +256,8 @@
 	"history.entities.contribution": "Contribution",
 	"history.entities.participant_invite": "Invitation",
 
+	"settings.backToProjects": "← Retour aux projets",
+
 	"projectSettings.backToProject": "← Retour au projet",
 	"projectSettings.title": "Paramètres du projet",
 	"projectSettings.needAdminPermissions": "Vous avez besoin de permissions d'administrateur pour accéder aux paramètres.",
