Remove translations from user setting, it's already available in the header of every page

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -10,6 +10,7 @@
 	"common.success": "Success",
 	"common.yes": "Yes",
 	"common.no": "No",
+	"common.back": "← Back",
 	"common.created": "Created",
 	"common.clear": "Clear",
 	"common.unknown": "Unknown",
