--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -10,6 +10,7 @@
 	"common.success": "Succès",
 	"common.yes": "Oui",
 	"common.no": "Non",
+	"common.back": "← Retour",
 	"common.created": "Créé",
 	"common.clear": "Effacer",
 	"common.unknown": "Inconnu",
