--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -74,6 +74,7 @@
 	"settings.currencyAfter": "After amount",
 	"settings.preferencesSaved": "Preferences saved",
 	"settings.savingPreferences": "Saving...",
+	"settings.preferencesNotice": "Note: These settings only affect how numbers and dates are displayed. BonsCompte does not perform currency conversion.",
 
 	"projects.title": "My Projects",
 	"projects.newProject": "+ New Project",
