Use date format preference in DateInput

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -132,6 +132,7 @@
 	"debts.paidBy": "Paid by",
 	"debts.on": "on",
 	"debts.from": "from",
+	"debts.to": "to",
 
 	"payments.title": "Payments",
 	"payments.addPayment": "Add Payment",
