Translate history validation strings and improve project summary in main project selection page

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -97,6 +97,17 @@
 	"projects.failedToLoad": "Failed to load projects",
 	"projects.failedToCreate": "Failed to create project",
 	"projects.failedToJoin": "Failed to join project",
+	"projects.owner": "Owner",
+	"projects.youOwe": "You owe",
+	"projects.owedToYou": "Owed to you",
+	"projects.poolOwnership": "Pool ownership",
+	"projects.allSettled": "All settled!",
+	"projects.createdJustNow": "created just now",
+	"projects.createdMinutesAgo": "created {minutes}m ago",
+	"projects.createdHoursAgo": "created {hours}h ago",
+	"projects.createdDaysAgo": "created {days}d ago",
+	"projects.createdMonthsAgo": "created {months}mo ago",
+	"projects.createdYearsAgo": "created {years}y ago",
 
 	"roles.admin": "Admin",
 	"roles.editor": "Editor",
@@ -228,6 +239,9 @@
 	"history.verifying": "Verifying...",
 	"history.verifyChain": "Verify Chain",
 	"history.entries": "entries",
+	"history.emptyLog": "No entries in history log",
+	"history.chainValid": "Hash chain is valid",
+	"history.chainInvalid": "Hash chain is broken",
 	"history.loadingHistory": "Loading history...",
 	"history.noEntriesFound": "No history entries found.",
 	"history.clearFilters": "Clear Filters",
