--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -97,6 +97,17 @@
 	"projects.failedToLoad": "Échec du chargement des projets",
 	"projects.failedToCreate": "Échec de la création du projet",
 	"projects.failedToJoin": "Échec pour rejoindre le projet",
+	"projects.owner": "Propriétaire",
+	"projects.youOwe": "Vous devez",
+	"projects.owedToYou": "On vous doit",
+	"projects.poolOwnership": "Part du pot commun",
+	"projects.allSettled": "Tout est réglé !",
+	"projects.createdJustNow": "créé à l'instant",
+	"projects.createdMinutesAgo": "créé il y a {minutes}min",
+	"projects.createdHoursAgo": "créé il y a {hours}h",
+	"projects.createdDaysAgo": "créé il y a {days}j",
+	"projects.createdMonthsAgo": "créé il y a {months} mois",
+	"projects.createdYearsAgo": "créé il y a {years} an(s)",
 
 	"roles.admin": "Admin",
 	"roles.editor": "Éditeur",
@@ -228,6 +239,9 @@
 	"history.verifying": "Vérification...",
 	"history.verifyChain": "Vérifier la chaîne",
 	"history.entries": "entrées",
+	"history.emptyLog": "Aucune entrée dans l'historique",
+	"history.chainValid": "La chaîne de hachage est valide",
+	"history.chainInvalid": "La chaîne de hachage est corrompue",
 	"history.loadingHistory": "Chargement de l'historique...",
 	"history.noEntriesFound": "Aucune entrée d'historique trouvée.",
 	"history.clearFilters": "Effacer les filtres",
