Improve auth robustness, observability, and database reliability
Backend:
- Distinguish JWT ExpiredSignature from other token errors
- Add structured logging for auth events with enumerated reason codes
- Downgrade expected JWT errors from ERROR to INFO/DEBUG
- Add error codes to all API error responses
- Optimize SQLite pool: WAL mode, busy_timeout, smaller pool size
- Fix rate limiting by enabling ConnectInfo for SocketAddr extraction

Frontend:
- Add ApiRequestError class for structured error handling
- Show user-friendly error messages based on error codes
- Display session expired message on login page
- Add i18n translations for auth errors (en/fr)

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -38,6 +38,14 @@
 	"auth.passwordTooShort": "Password must be at least 6 characters",
 	"auth.loginFailed": "Login failed",
 	"auth.registrationFailed": "Registration failed",
+	"auth.sessionExpired": "Your session has expired. Please log in again.",
+	"auth.errors.invalidCredentials": "Invalid username or password",
+	"auth.errors.accountPending": "Your account is pending approval",
+	"auth.errors.accountRevoked": "Your account has been revoked",
+	"auth.errors.passwordTooWeak": "Password must be at least 6 characters",
+	"auth.errors.usernameExists": "This username is already taken",
+	"auth.errors.invalidInput": "Please check your input and try again",
+	"auth.errors.internalError": "Something went wrong. Please try again later.",
 
 	"settings.title": "Account Settings",
 	"settings.accountInfo": "Account Info",
