--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -38,6 +38,14 @@
 	"auth.passwordTooShort": "Le mot de passe doit contenir au moins 6 caractères",
 	"auth.loginFailed": "Échec de la connexion",
 	"auth.registrationFailed": "Échec de l'inscription",
+	"auth.sessionExpired": "Votre session a expiré. Veuillez vous reconnecter.",
+	"auth.errors.invalidCredentials": "Nom d'utilisateur ou mot de passe invalide",
+	"auth.errors.accountPending": "Votre compte est en attente d'approbation",
+	"auth.errors.accountRevoked": "Votre compte a été révoqué",
+	"auth.errors.passwordTooWeak": "Le mot de passe doit contenir au moins 6 caractères",
+	"auth.errors.usernameExists": "Ce nom d'utilisateur est déjà pris",
+	"auth.errors.invalidInput": "Veuillez vérifier vos informations et réessayer",
+	"auth.errors.internalError": "Une erreur s'est produite. Veuillez réessayer plus tard.",
 
 	"settings.title": "Paramètres du compte",
 	"settings.accountInfo": "Informations du compte",
