Add display name editing in user settings
Backend:
- Add PUT /users/me/profile endpoint to update display_name
- Normalize empty display_name to NULL

Frontend:
- Add updateProfile API function
- Add updateUser method to auth store
- Add inline editing for display name in settings page
- Add translations for profile editing (en/fr)

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -66,6 +66,10 @@
 	"settings.passwordRequired": "Password is required",
 	"settings.failedToChangePassword": "Failed to change password",
 	"settings.failedToDelete": "Failed to delete account",
+	"settings.profileSaved": "Profile saved successfully",
+	"settings.failedToSaveProfile": "Failed to save profile",
+	"settings.displayNamePlaceholder": "Your display name",
+	"settings.notSet": "Not set",
 	"settings.preferences": "Preferences",
 	"settings.language": "Language",
 	"settings.dateFormat": "Date Format",
