--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -66,6 +66,10 @@
 	"settings.passwordRequired": "Le mot de passe est requis",
 	"settings.failedToChangePassword": "Échec de la modification du mot de passe",
 	"settings.failedToDelete": "Échec de la suppression du compte",
+	"settings.profileSaved": "Profil enregistré avec succès",
+	"settings.failedToSaveProfile": "Échec de l'enregistrement du profil",
+	"settings.displayNamePlaceholder": "Votre nom d'affichage",
+	"settings.notSet": "Non défini",
 	"settings.preferences": "Préférences",
 	"settings.language": "Langue",
 	"settings.dateFormat": "Format de date",
