Improve payment oage by adding filters and search in payments

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -225,6 +225,23 @@
 	"payments.viewReceipt": "View receipt",
 	"payments.deletePayment": "Delete payment",
 	"payments.transfer": "Transfer",
+	"payments.filters": "Filters",
+	"payments.searchDescription": "Search description",
+	"payments.searchPlaceholder": "Search payments...",
+	"payments.filterByPayer": "Paid by",
+	"payments.filterByContributor": "Contributor",
+	"payments.filterByType": "Payment type",
+	"payments.allPayers": "All payers",
+	"payments.allContributors": "All contributors",
+	"payments.allTypes": "All types",
+	"payments.typeExpense": "External expense",
+	"payments.typeTransfer": "Internal transfer",
+	"payments.typeRecurring": "Recurring",
+	"payments.dateFrom": "From date",
+	"payments.dateTo": "To date",
+	"payments.showingFiltered": "Showing filtered payments:",
+	"payments.noMatchingPayments": "No payments match your filters",
+	"payments.loadMore": "Load more payments",
 
 	"participants.title": "Participants",
 	"participants.addParticipant": "Add Participant",
