--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -225,6 +225,23 @@
 	"payments.viewReceipt": "Voir le reçu",
 	"payments.deletePayment": "Supprimer le paiement",
 	"payments.transfer": "Transfert",
+	"payments.filters": "Filtres",
+	"payments.searchDescription": "Rechercher description",
+	"payments.searchPlaceholder": "Rechercher des paiements...",
+	"payments.filterByPayer": "Payé par",
+	"payments.filterByContributor": "Contributeur",
+	"payments.filterByType": "Type de paiement",
+	"payments.allPayers": "Tous les payeurs",
+	"payments.allContributors": "Tous les contributeurs",
+	"payments.allTypes": "Tous les types",
+	"payments.typeExpense": "Dépense externe",
+	"payments.typeTransfer": "Transfert interne",
+	"payments.typeRecurring": "Récurrent",
+	"payments.dateFrom": "Date de début",
+	"payments.dateTo": "Date de fin",
+	"payments.showingFiltered": "Affichage de paiements filtrés:",
+	"payments.noMatchingPayments": "Aucun paiement ne correspond à vos filtres",
+	"payments.loadMore": "Charger plus de paiements",
 
 	"participants.title": "Participants",
 	"participants.addParticipant": "Ajouter un participant",
