Add a new cashflow page in order to see how to resolve recurrent payments

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -171,6 +171,44 @@
 	"debts.from": "from",
 	"debts.to": "to",
 
+	"settlements.title": "Settlement Snapshot",
+
+	"cashflow.title": "Cashflow Planning",
+	"cashflow.failedToLoad": "Failed to load cashflow projection",
+	"cashflow.timeHorizon": "Time Horizon",
+	"cashflow.threeMonths": "3 Months",
+	"cashflow.sixMonths": "6 Months",
+	"cashflow.twelveMonths": "12 Months",
+	"cashflow.recommendationMode": "Recommendation Method",
+	"cashflow.simpleAverage": "Simple Average",
+	"cashflow.linearRegression": "Linear Regression",
+	"cashflow.balanceOverTime": "Balance Over Time",
+	"cashflow.balance": "Balance",
+	"cashflow.month": "Month",
+	"cashflow.recommendations": "Recurring Contribution Recommendations",
+	"cashflow.participant": "Participant",
+	"cashflow.currentTrend": "Current Trend (Monthly)",
+	"cashflow.recommended": "Recommended",
+	"cashflow.recommendationNote": "These recommendations show how much each participant should contribute at the selected frequency to stay balanced over the time horizon.",
+	"cashflow.paymentFrequency": "Payment Frequency",
+	"cashflow.every": "Every",
+	"cashflow.weeks": "week(s)",
+	"cashflow.months": "month(s)",
+	"cashflow.years": "year(s)",
+	"cashflow.poolEvolution": "Pool Account Evolution",
+	"cashflow.evolution": "Evolution",
+	"cashflow.noRecommendations": "No recommendations available yet",
+	"cashflow.bankUpdateWarning": "⚠️ REMINDER: Don't forget to update your recurring bank transfer to match this payment!\n\nAfter creating this recurring payment in BonsCompte, please also update (or create) the corresponding automatic payment in your bank account.\n\nClick OK to continue creating the payment.",
+	"cashflow.consolidateMode": "Consolidate existing recurring payments",
+	"cashflow.consolidateModeHelp": "When enabled, existing recurring pool contributions will be excluded from the calculation and replaced with a single optimized payment when you click 'Create Payment'.",
+	"cashflow.paymentsToDelete": "Payments That Will Be Deleted",
+	"cashflow.consolidateExplanation": "When you click 'Create Payment', the following existing recurring payments will be deleted and replaced with a single optimized payment:",
+	"cashflow.consolidateAction": "A new consolidated payment will be created with the recommended amount and frequency.",
+	"cashflow.consolidateWarning": "⚠️ CONSOLIDATE MODE WARNING\n\nYou are about to DELETE {count} existing recurring payment(s) and replace them with a single consolidated payment:\n\nPayments to be deleted:\n{paymentsList}\n\nNew payment:\n{newAmount} every {frequency}\n\nThis action cannot be undone. Are you sure you want to proceed?",
+	"cashflow.consolidatedPaymentDescription": "Consolidated recurring contribution (recommended)",
+	"cashflow.consolidateSuccess": "Successfully consolidated {count} payment(s) into one!",
+	"cashflow.consolidateError": "Failed to consolidate payments. Please try again.",
+
 	"payments.title": "Payments",
 	"payments.addPayment": "Add Payment",
 	"payments.editPayment": "Edit Payment",
