--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -171,6 +171,44 @@
 	"debts.from": "du",
 	"debts.to": "au",
 
+	"settlements.title": "Aperçu des règlements",
+
+	"cashflow.title": "Planification des flux de trésorerie",
+	"cashflow.failedToLoad": "Échec du chargement de la projection de trésorerie",
+	"cashflow.timeHorizon": "Horizon temporel",
+	"cashflow.threeMonths": "3 mois",
+	"cashflow.sixMonths": "6 mois",
+	"cashflow.twelveMonths": "12 mois",
+	"cashflow.recommendationMode": "Méthode de recommandation",
+	"cashflow.simpleAverage": "Moyenne simple",
+	"cashflow.linearRegression": "Régression linéaire",
+	"cashflow.balanceOverTime": "Solde dans le temps",
+	"cashflow.balance": "Solde",
+	"cashflow.month": "Mois",
+	"cashflow.recommendations": "Recommandations de contribution récurrente",
+	"cashflow.participant": "Participant",
+	"cashflow.currentTrend": "Tendance actuelle (mensuelle)",
+	"cashflow.recommended": "Recommandé",
+	"cashflow.recommendationNote": "Ces recommandations indiquent combien chaque participant devrait contribuer à la fréquence sélectionnée pour rester équilibré sur l'horizon temporel.",
+	"cashflow.paymentFrequency": "Fréquence de paiement",
+	"cashflow.every": "Tous les",
+	"cashflow.weeks": "semaine(s)",
+	"cashflow.months": "mois",
+	"cashflow.years": "année(s)",
+	"cashflow.poolEvolution": "Évolution du compte partagé",
+	"cashflow.evolution": "Évolution",
+	"cashflow.noRecommendations": "Aucune recommandation disponible pour le moment",
+	"cashflow.bankUpdateWarning": "⚠️ RAPPEL : N'oubliez pas de mettre à jour votre virement bancaire récurrent pour correspondre à ce paiement !\n\nAprès avoir créé ce paiement récurrent dans BonsCompte, veuillez également mettre à jour (ou créer) le paiement automatique correspondant dans votre compte bancaire.\n\nCliquez sur OK pour continuer la création du paiement.",
+	"cashflow.consolidateMode": "Consolider les paiements récurrents existants",
+	"cashflow.consolidateModeHelp": "Lorsqu'activé, les contributions récurrentes au compte partagé existantes seront exclues du calcul et remplacées par un seul paiement optimisé lorsque vous cliquez sur 'Créer le paiement'.",
+	"cashflow.paymentsToDelete": "Paiements qui seront supprimés",
+	"cashflow.consolidateExplanation": "Lorsque vous cliquez sur 'Créer le paiement', les paiements récurrents suivants seront supprimés et remplacés par un seul paiement optimisé :",
+	"cashflow.consolidateAction": "Un nouveau paiement consolidé sera créé avec le montant et la fréquence recommandés.",
+	"cashflow.consolidateWarning": "⚠️ AVERTISSEMENT MODE CONSOLIDATION\n\nVous êtes sur le point de SUPPRIMER {count} paiement(s) récurrent(s) existant(s) et de les remplacer par un seul paiement consolidé :\n\nPaiements à supprimer :\n{paymentsList}\n\nNouveau paiement :\n{newAmount} tous les {frequency}\n\nCette action ne peut pas être annulée. Êtes-vous sûr de vouloir continuer ?",
+	"cashflow.consolidatedPaymentDescription": "Contribution récurrente consolidée (recommandée)",
+	"cashflow.consolidateSuccess": "{count} paiement(s) consolidé(s) avec succès !",
+	"cashflow.consolidateError": "Échec de la consolidation des paiements. Veuillez réessayer.",
+
 	"payments.title": "Paiements",
 	"payments.addPayment": "Ajouter un paiement",
 	"payments.editPayment": "Modifier le paiement",
