Translate invite page

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -121,6 +121,20 @@
 	"projects.createdMonthsAgo": "created {months}mo ago",
 	"projects.createdYearsAgo": "created {years}y ago",
 
+	"join.title": "Join Project",
+	"join.inviteMessage": "You've been invited to join a project!",
+	"join.participantLinkNote": "This invite will automatically link you to a participant in the project.",
+	"join.inviteCodeLabel": "Invite Code:",
+	"join.inviteCodeInput": "Invite Code",
+	"join.inviteCodePlaceholder": "Enter invite code",
+	"join.enterCodePrompt": "Enter an invite code to join a project.",
+	"join.joining": "Joining...",
+	"join.joinButton": "Join Project",
+	"join.goToProjects": "Go to Projects",
+	"join.backToProjects": "Back to Projects",
+	"join.pendingApproval": "Your request to join \"{name}\" has been submitted and is pending admin approval.",
+	"join.failedToJoin": "Failed to join project",
+
 	"roles.admin": "Admin",
 	"roles.editor": "Editor",
 	"roles.reader": "Reader",
