--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -121,6 +121,20 @@
 	"projects.createdMonthsAgo": "créé il y a {months} mois",
 	"projects.createdYearsAgo": "créé il y a {years} an(s)",
 
+	"join.title": "Rejoindre un projet",
+	"join.inviteMessage": "Vous avez été invité à rejoindre un projet !",
+	"join.participantLinkNote": "Cette invitation vous liera automatiquement à un participant du projet.",
+	"join.inviteCodeLabel": "Code d'invitation :",
+	"join.inviteCodeInput": "Code d'invitation",
+	"join.inviteCodePlaceholder": "Entrez le code d'invitation",
+	"join.enterCodePrompt": "Entrez un code d'invitation pour rejoindre un projet.",
+	"join.joining": "Adhésion...",
+	"join.joinButton": "Rejoindre le projet",
+	"join.goToProjects": "Aller aux projets",
+	"join.backToProjects": "Retour aux projets",
+	"join.pendingApproval": "Votre demande pour rejoindre « {name} » a été soumise et est en attente d'approbation par un administrateur.",
+	"join.failedToJoin": "Échec pour rejoindre le projet",
+
 	"roles.admin": "Admin",
 	"roles.editor": "Éditeur",
 	"roles.reader": "Lecteur",
