Every N weekly -> Every N weeks

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -211,6 +211,10 @@
 	"payments.recurrence.monthly": "monthly",
 	"payments.recurrence.yearly": "yearly",
 	"payments.recurrence.every": "every",
+	"payments.recurrence.everyNDays": "every {n} days",
+	"payments.recurrence.everyNWeeks": "every {n} weeks",
+	"payments.recurrence.everyNMonths": "every {n} months",
+	"payments.recurrence.everyNYears": "every {n} years",
 	"payments.selectDaysOfWeek": "Select days of the week:",
 	"payments.selectDaysOfMonth": "Select days of the month:",
 	"payments.monthdayWarning": "Note: For months with fewer days, the last day of the month will be used.",
