--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -211,6 +211,10 @@
 	"payments.recurrence.monthly": "mensuel",
 	"payments.recurrence.yearly": "annuel",
 	"payments.recurrence.every": "tous les",
+	"payments.recurrence.everyNDays": "tous les {n} jours",
+	"payments.recurrence.everyNWeeks": "toutes les {n} semaines",
+	"payments.recurrence.everyNMonths": "tous les {n} mois",
+	"payments.recurrence.everyNYears": "tous les {n} ans",
 	"payments.selectDaysOfWeek": "Sélectionnez les jours de la semaine :",
 	"payments.selectDaysOfMonth": "Sélectionnez les jours du mois :",
 	"payments.monthdayWarning": "Remarque : Pour les mois avec moins de jours, le dernier jour du mois sera utilisé.",
