Improved project layout and cashflow-planning, but commented out the page for now as it's not functionnal

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -171,7 +171,7 @@
 	"debts.from": "from",
 	"debts.to": "to",
 
-	"settlements.title": "Settlement Snapshot",
+	"settlements.title": "Settlement Overview",
 
 	"cashflow.title": "Cashflow Planning",
 	"cashflow.failedToLoad": "Failed to load cashflow projection",
@@ -208,6 +208,24 @@
 	"cashflow.consolidatedPaymentDescription": "Consolidated recurring contribution (recommended)",
 	"cashflow.consolidateSuccess": "Successfully consolidated {count} payment(s) into one!",
 	"cashflow.consolidateError": "Failed to consolidate payments. Please try again.",
+	"cashflow.configureRecommendation": "Configure Recurring Contribution",
+	"cashflow.payer": "Payer",
+	"cashflow.receiver": "Target Account",
+	"cashflow.selectPayer": "Select payer...",
+	"cashflow.selectReceiver": "Select target account...",
+	"cashflow.startDate": "Start Date",
+	"cashflow.endDate": "End Date",
+	"cashflow.shouldTransfer": "should transfer",
+	"cashflow.perFrequency": "every {interval} {type}",
+	"cashflow.to": "to",
+	"cashflow.currentTrendLabel": "Current trend",
+	"cashflow.method": "Method",
+	"cashflow.noRecommendationData": "No recommendation data available for this configuration",
+	"cashflow.selectPayerReceiver": "Select a payer and target account to see the recommendation",
+	"cashflow.includeInProjection": "Include recommendation in projection",
+	"cashflow.today": "Today",
+	"cashflow.date": "Date",
+	"cashflow.recommendationHorizon": "Recommendation Horizon",
 
 	"payments.title": "Payments",
 	"payments.addPayment": "Add Payment",
