--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -171,9 +171,9 @@
 	"debts.from": "du",
 	"debts.to": "au",
 
-	"settlements.title": "Aperçu des règlements",
+	"settlements.title": "État des soldes",
 
-	"cashflow.title": "Planification des flux de trésorerie",
+	"cashflow.title": "Planification de trésorerie",
 	"cashflow.failedToLoad": "Échec du chargement de la projection de trésorerie",
 	"cashflow.timeHorizon": "Horizon temporel",
 	"cashflow.threeMonths": "3 mois",
@@ -208,6 +208,24 @@
 	"cashflow.consolidatedPaymentDescription": "Contribution récurrente consolidée (recommandée)",
 	"cashflow.consolidateSuccess": "{count} paiement(s) consolidé(s) avec succès !",
 	"cashflow.consolidateError": "Échec de la consolidation des paiements. Veuillez réessayer.",
+	"cashflow.configureRecommendation": "Configurer la contribution récurrente",
+	"cashflow.payer": "Payeur",
+	"cashflow.receiver": "Compte cible",
+	"cashflow.selectPayer": "Sélectionner le payeur...",
+	"cashflow.selectReceiver": "Sélectionner le compte cible...",
+	"cashflow.startDate": "Date de début",
+	"cashflow.endDate": "Date de fin",
+	"cashflow.shouldTransfer": "devrait transférer",
+	"cashflow.perFrequency": "tous les {interval} {type}",
+	"cashflow.to": "vers",
+	"cashflow.currentTrendLabel": "Tendance actuelle",
+	"cashflow.method": "Méthode",
+	"cashflow.noRecommendationData": "Aucune donnée de recommandation disponible pour cette configuration",
+	"cashflow.selectPayerReceiver": "Sélectionnez un payeur et un compte cible pour voir la recommandation",
+	"cashflow.includeInProjection": "Inclure la recommandation dans la projection",
+	"cashflow.today": "Aujourd'hui",
+	"cashflow.date": "Date",
+	"cashflow.recommendationHorizon": "Horizon de recommandation",
 
 	"payments.title": "Paiements",
 	"payments.addPayment": "Ajouter un paiement",
