Fixed fronted issue in debts/settlement-overview page that broke collapse/extend completely, regression was in cf1f5644f10fd3b1e86a2d226653fe810026b72d. Renamed debts/settlement-overview page overview and cleaned up translations for that page

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -139,39 +139,34 @@
 	"roles.editor": "Editor",
 	"roles.reader": "Reader",
 
-	"debts.title": "Debts Summary",
-	"debts.summary": "Summary",
-	"debts.balances": "Balances",
-	"debts.balance": "Balance",
-	"debts.settlements": "Settlements",
-	"debts.directOnlyMode": "Direct-only (no intermediaries)",
-	"debts.allSettled": "All settled up!",
-	"debts.noSettlementsForParticipant": "No settlements for this participant",
-	"debts.owes": "owes",
-	"debts.to": "to",
-	"debts.today": "Today",
-	"debts.tomorrow": "Tomorrow",
-	"debts.yesterday": "Yesterday",
-	"debts.inDays": "in {days} days",
-	"debts.daysAgo": "{days} days ago",
-	"debts.future": "Future",
-	"debts.past": "Past",
-	"debts.focusOn": "Focus on",
-	"debts.allParticipants": "All Participants",
-	"debts.participant": "Participant",
-	"debts.ownership": "Ownership",
-	"debts.noPoolActivity": "No pool account activity yet",
-	"debts.noRelationships": "No relationships with other participants",
-	"debts.paymentsIncluded": "Payments Included",
-	"debts.transaction": "transaction",
-	"debts.transactions": "transactions",
-	"debts.recurring": "recurring",
-	"debts.paidBy": "Paid by",
-	"debts.on": "on",
-	"debts.from": "from",
-	"debts.to": "to",
-
-	"settlements.title": "Settlement Overview",
+	"overview.title": "Overview",
+	"overview.today": "Today",
+	"overview.tomorrow": "Tomorrow",
+	"overview.yesterday": "Yesterday",
+	"overview.inDays": "in {days} days",
+	"overview.daysAgo": "{days} days ago",
+	"overview.future": "Future",
+	"overview.past": "Past",
+	"overview.focusOn": "Focus on",
+	"overview.allParticipants": "All Participants",
+	"overview.noPoolActivity": "No pool account activity yet",
+	"overview.participant": "Participant",
+	"overview.ownership": "Ownership",
+	"overview.balances": "Balances between participants",
+	"overview.balance": "Balance",
+	"overview.noRelationships": "No relationships with other participants",
+	"overview.settlements": "Settlements",
+	"overview.directOnlyMode": "Direct-only (no intermediaries)",
+	"overview.noSettlementsForParticipant": "No settlements for this participant",
+	"overview.allSettled": "All settled up!",
+	"overview.paymentsIncluded": "Payments Included",
+	"overview.transaction": "transaction",
+	"overview.transactions": "transactions",
+	"overview.recurring": "recurring",
+	"overview.paidBy": "Paid by",
+	"overview.from": "from",
+	"overview.to": "to",
+	"overview.on": "on",
 
 	"cashflow.title": "Cashflow Planning",
 	"cashflow.failedToLoad": "Failed to load cashflow projection",
