--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -139,39 +139,34 @@
 	"roles.editor": "Éditeur",
 	"roles.reader": "Lecteur",
 
-	"debts.title": "Résumé des dettes",
-	"debts.summary": "Résumé",
-	"debts.balances": "Soldes",
-	"debts.balance": "Solde",
-	"debts.settlements": "Règlements",
-	"debts.directOnlyMode": "Direct uniquement (sans intermédiaires)",
-	"debts.allSettled": "Tout est réglé !",
-	"debts.noSettlementsForParticipant": "Aucun règlement pour ce participant",
-	"debts.owes": "doit",
-	"debts.to": "à",
-	"debts.today": "Aujourd'hui",
-	"debts.tomorrow": "Demain",
-	"debts.yesterday": "Hier",
-	"debts.inDays": "dans {days} jours",
-	"debts.daysAgo": "il y a {days} jours",
-	"debts.future": "Futur",
-	"debts.past": "Passé",
-	"debts.focusOn": "Focus sur",
-	"debts.allParticipants": "Tous les participants",
-	"debts.participant": "Participant",
-	"debts.ownership": "Propriété",
-	"debts.noPoolActivity": "Aucune activité de cagnotte pour le moment",
-	"debts.noRelationships": "Aucune relation avec d'autres participants",
-	"debts.paymentsIncluded": "Paiements inclus",
-	"debts.transaction": "transaction",
-	"debts.transactions": "transactions",
-	"debts.recurring": "récurrent",
-	"debts.paidBy": "Payé par",
-	"debts.on": "le",
-	"debts.from": "du",
-	"debts.to": "au",
-
-	"settlements.title": "État des soldes",
+	"overview.title": "Résumé",
+	"overview.today": "Aujourd'hui",
+	"overview.tomorrow": "Demain",
+	"overview.yesterday": "Hier",
+	"overview.inDays": "dans {days} jours",
+	"overview.daysAgo": "il y a {days} jours",
+	"overview.future": "Futur",
+	"overview.past": "Passé",
+	"overview.focusOn": "Focus sur",
+	"overview.allParticipants": "Tous les participants",
+	"overview.noPoolActivity": "Aucune activité de cagnotte pour le moment",
+	"overview.participant": "Participant",
+	"overview.ownership": "Part",
+	"overview.balances": "Soldes entre les participants",
+	"overview.balance": "Solde",
+	"overview.noRelationships": "Aucune relation avec d'autres participants",
+	"overview.settlements": "Règlements",
+	"overview.directOnlyMode": "Sans intermédiaires",
+	"overview.noSettlementsForParticipant": "Aucun règlement pour ce participant",
+	"overview.allSettled": "Tout est réglé !",
+	"overview.paymentsIncluded": "Paiements inclus",
+	"overview.transaction": "transaction",
+	"overview.transactions": "transactions",
+	"overview.recurring": "récurrent",
+	"overview.paidBy": "Payé par",
+	"overview.from": "du",
+	"overview.to": "au",
+	"overview.on": "le",
 
 	"cashflow.title": "Planification de trésorerie",
 	"cashflow.failedToLoad": "Échec du chargement de la projection de trésorerie",
