Add a graph in the overview to display a range instead of a single date

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -148,7 +148,7 @@
 	"overview.future": "Future",
 	"overview.past": "Past",
 	"overview.focusOn": "Focus on",
-	"overview.allParticipants": "All Participants",
+	"overview.allParticipants": "all participants",
 	"overview.noPoolActivity": "No pool account activity yet",
 	"overview.participant": "Participant",
 	"overview.ownership": "Ownership",
@@ -164,9 +164,16 @@
 	"overview.transactions": "transactions",
 	"overview.recurring": "recurring",
 	"overview.paidBy": "Paid by",
-	"overview.from": "from",
+	"overview.from": "From",
 	"overview.to": "to",
 	"overview.on": "on",
+	"overview.optional": "(optional)",
+	"overview.clearRange": "Clear Range",
+	"overview.rangeMode": "Range Mode",
+	"overview.selectEndDate": "Select end date",
+	"overview.amountPaidFor": "{payer} paid {amount} for {paidFor}",
+	"overview.amountContributed": "{payer} contributed {amount}",
+	"overview.amountConsumed": "{consumer} comsumed {amount}",
 
 	"cashflow.title": "Cashflow Planning",
 	"cashflow.failedToLoad": "Failed to load cashflow projection",
